[gd_scene load_steps=3 format=3 uid="uid://dt1743waxauqe"]

[ext_resource type="Script" path="res://Helpers/hurtbox.gd" id="1_5tmfx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wq1it"]
height = 28.0

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_5tmfx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wq1it")

[node name="HurtboxDisabledTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="HurtboxDisabledTimer" to="." method="_on_hurtbox_disabled_timer_timeout"]
